--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="https://ymcui.github.io/cmrc2017/assets/css/main.css">
 
-<meta http-equiv="cleartype" content="on">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312"><title>CMRC 2017</title><frameset framespacing="0" border="0" rows="0" frameborder="0"><frame name="main" src="http://cmrc2017.hfl-rc.com/" scrolling="auto" noresize></frameset>
     <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
