--- a/committee/index.html
+++ b/committee/index.html
@@ -195,7 +195,7 @@
       <section class="page__content" itemprop="text">
         
 <p><strong>主办方： <a href="http://www.cips-cl.org">中国中文信息学会计算语言学专业委员会</a></strong><br />
-<strong>承办方： <a href="http://rc.hfl-tek.com">哈工大讯飞联合实验室</a></strong><br />
+<strong>承办方： <a href="http://www.hfl-rc.com">哈工大讯飞联合实验室</a></strong><br />
 <strong>冠名商： <a href="http://www.iflytek.com">科大讯飞股份有限公司</a></strong><br /></p>
 
 <p><img src="../images/sponsor-small.png" alt="image-center" class="align-center" /></p>
