--- a/program/index.html
+++ b/program/index.html
@@ -197,7 +197,7 @@
 <p>本届中文阅读理解评测（CMRC2017）将与CCL2017共同举办。<br />
 <strong>会议地点：</strong>江苏辰茂新世纪大酒店，南京市（具体信息请参考，<a href="http://www.cips-cl.org/static/CCL2017/accommodation.html">CCL2017主站</a>）<br />
 <strong>会议时间：</strong> 2017年10月14日下午（CCL2017主会第一天）<br />
-<strong>会议议程：</strong> <a href="http://www.hfl-tek.com/cmrc2017/program.html">http://www.hfl-tek.com/cmrc2017/program.html</a><br />
+<strong>会议议程：</strong> <a href="https://hfl-rc.github.io/cmrc2017/program/">http://www.hfl-tek.com/cmrc2017/program.html</a><br />
 <strong>会议注册：</strong> <a href="https://wj.qq.com/s/1531980/5f69">https://wj.qq.com/s/1531980/5f69</a><br /></p>
 
 <table>
