--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
 
 <p class="notice--info"><strong>2017/10/14</strong>  评测大会圆满落幕，感谢各单位的大力支持！</p>
 <p class="notice--info"><strong>2017/09/04</strong>  拟参加本次评测会议的人员请进行注册：<a href="https://wj.qq.com/s/1531980/5f69">注册链接</a></p>
-<p class="notice--info"><strong>2017/08/31</strong>  初步的大会议程已放出，请查看<a href="http://www.hfl-tek.com/cmrc2017/program.html">大会议程</a></p>
+<p class="notice--info"><strong>2017/08/31</strong>  初步的大会议程已放出，请查看<a href="https://hfl-rc.github.io/cmrc2017/program/">大会议程</a></p>
 
 <h2 id="section-1">参会信息</h2>
 <p>以下是本次评测大会的参会信息，供参考。<br />
 <strong>会议地点：</strong>江苏辰茂新世纪大酒店，南京市（具体信息请参考，<a href="http://www.cips-cl.org/static/CCL2017/accommodation.html">CCL2017主站</a>）<br />
 <strong>会议时间：</strong> 2017年10月14日下午<br />
-<strong>会议议程：</strong> <a href="http://www.hfl-tek.com/cmrc2017/program.html">http://www.hfl-tek.com/cmrc2017/program.html</a> <br />
+<strong>会议议程：</strong> <a href="https://hfl-rc.github.io/cmrc2017/program/">http://www.hfl-tek.com/cmrc2017/program.html</a> <br />
 <strong>评测会议注册：</strong> <a href="https://wj.qq.com/s/1531980/5f69">https://wj.qq.com/s/1531980/5f69</a> <br />
 <strong>CCL主会注册：</strong> <a href="http://123.57.230.127/ccl/">http://123.57.230.127/ccl/</a> <br />
 请注意：参加评测会议完全免费，但应CCL2017主办方要求，需注册CCL2017主会，具体请参考上述链接。</p>
@@ -251,13 +251,7 @@
 
 <p>本届阅读理解评测以填空型阅读理解问题为主。填空型问题是阅读理解任务中的较为基础的问题。目前竞争较为激烈的Facebook CBT数据集上，人们的平均答题准确率是81.6%。目前基于神经网络的方法已普遍可以达到75%以上的效果，可见差距已非常小。另外，除了填空型问题外，我们同时又设立了用户提问型问题的评测方向。参赛者需要考虑填空型问题到用户提问型问题的迁移，相比填空型问题要略微困难（具体请参考评测方向的描述）。</p>
 
-<p>本届中文机器阅读理解评测由<strong><a href="http://www.cipsc.org.cn">中国中文信息学会计算语言学专委会</a></strong>主办，<strong><a href="http://www.hfl-tek.com">哈工大讯飞联合实验室（HFL）</a></strong>承办，旨在促进中文阅读理解研究及发展并且为相关领域学者提供一个良好的沟通平台。在此，评测会务组诚邀各个单位参加本次评测活动！</p>
-
-<p><strong><a href="http://www.hfl-tek.com/cmrc2017/index.html">第一届“讯飞杯”中文机器阅读理解评测（The First Evaluation Workshop on Chinese Machine Reading Comprehension，CMRC2017）</a></strong>在2017年10月与第十六届全国计算语言学学术会议（CCL2017）在南京圆满落幕，得到了相关同行的积极参与和大力支持。从2017年开始，全国计算语言学学术会议（CCL）计划举办评测活动。</p>
-
-<p>作为CCL的系列评测，今年我们继续举办<strong>第二届“讯飞杯”中文机器阅读理解评测 (The Second Evaluation Workshop on Chinese Machine Reading Comprehension, CMRC2018)</strong>，并将于2018年下半年与第十七届全国计算语言学学术会议（CCL2018，2018年10月19日~21日，湖南长沙）共同召开。本届中文机器阅读理解评测由<strong><a href="http://www.cips-cl.org">中国中文信息学会计算语言学专业委员会（CIPS-CL）</a></strong>主办，<strong><a href="http://rc.hfl-tek.com">哈工大讯飞联合实验室（HFL）</a></strong>承办，<strong><a href="http://www.iflytek.com">科大讯飞股份有限公司</a></strong>冠名赞助，旨在进一步促进中文机器阅读理解研究及发展并且为相关领域学者提供一个良好的沟通平台。在此，CMRC2018评测委员会诚邀各家单位参加本次评测活动！</p>
-
-<p><strong><a href="http://rc.hfl-tek.com">哈工大讯飞联合实验室（HFL）</a></strong>长期致力于机器阅读理解的研究和发展。在中文阅读理解方面，哈工大讯飞联合实验室在2016年7月提出<strong><a href="https://github.com/ymcui/Chinese-RC-Dataset">首个中文填空型阅读理解数据集PD&amp;CFT</a></strong>。在2017年承办了第一届“讯飞杯”中文机器阅读理解评测（CMRC2017）并且发布了相关<strong><a href="https://github.com/ymcui/cmrc2017">中文阅读理解数据集</a></strong>，进一步促进了中文机器阅读理解研究。我们希望通过持续的中文机器阅读理解评测，与相关领域学者共同推进中文机器阅读理解的技术水平。</p>
+<p>本届中文机器阅读理解评测由<strong><a href="http://www.cipsc.org.cn">中国中文信息学会计算语言学专委会</a></strong>主办，<strong><a href="http://www.hfl-rc.com">哈工大讯飞联合实验室（HFL）</a></strong>承办，旨在促进中文阅读理解研究及发展并且为相关领域学者提供一个良好的沟通平台。在此，评测会务组诚邀各个单位参加本次评测活动！</p>
 
 <h2 id="section-2">奖项设置</h2>
 <p>本届评测将评选出如下奖项，颁发奖金和荣誉证书。<br />
@@ -337,13 +331,13 @@
 
 <h2 id="section-3">注册报名(已关闭)</h2>
 <p>有意向参加的单位机构请直接填写报名表后发给评测会务组。<br />
-报名表下载：<a href="http://www.hfl-tek.com/cmrc2017/cmrc2017_application_forms.docx">cmrc2017_application_forms</a><br />
+报名表下载：<a href="https://hfl-rc.github.io/cmrc2017/cmrc2017_application_forms.docx">cmrc2017_application_forms</a><br />
 评测会务组邮箱： <strong>cmrc2017@126.com</strong></p>
 
 <h2 id="section-4">评测组织</h2>
 
 <p><strong>主办方： <a href="http://www.cips-cl.org">中国中文信息学会计算语言学专业委员会</a></strong><br />
-<strong>承办方： <a href="http://rc.hfl-tek.com">哈工大讯飞联合实验室</a></strong><br />
+<strong>承办方： <a href="http://www.hfl-rc.com">哈工大讯飞联合实验室</a></strong><br />
 <strong>冠名商： <a href="http://www.iflytek.com">科大讯飞股份有限公司</a></strong><br /></p>
 
 <p><strong>评测委员会：</strong><br />
