--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <p>以下是本次评测大会的参会信息，供参考。<br />
 <strong>会议地点：</strong>江苏辰茂新世纪大酒店，南京市（具体信息请参考，<a href="http://www.cips-cl.org/static/CCL2017/accommodation.html">CCL2017主站</a>）<br />
 <strong>会议时间：</strong> 2017年10月14日下午<br />
-<strong>会议议程：</strong> <a href="https://hfl-rc.github.io/cmrc2017/program/">http://www.hfl-tek.com/cmrc2017/program.html</a> <br />
+<strong>会议议程：</strong> <a href="https://hfl-rc.github.io/cmrc2017/program/">https://hfl-rc.github.io/cmrc2017/program/</a> <br />
 <strong>评测会议注册：</strong> <a href="https://wj.qq.com/s/1531980/5f69">https://wj.qq.com/s/1531980/5f69</a> <br />
 <strong>CCL主会注册：</strong> <a href="http://123.57.230.127/ccl/">http://123.57.230.127/ccl/</a> <br />
 请注意：参加评测会议完全免费，但应CCL2017主办方要求，需注册CCL2017主会，具体请参考上述链接。</p>
